@@ -434,7 +434,12 @@ Bug fixes
 
 ======================= Lucene 3.x (not yet released) ================
 
-(No changes)
+Changes in runtime behavior
+
+* LUCENE-2834: the hash used to compute the lock file name when the
+  lock file is not stored in the index has changed.  This means you
+  will see a different lucene-XXX-write.lock in your lock directory.
+  (Robert Muir, Uwe Schindler, Mike McCandless)
 
 ======================= Lucene 3.2.0 =======================
 
